--- a/src/components/Newpassword/Newpassword.scss
+++ b/src/components/Newpassword/Newpassword.scss
@@ -5,11 +5,6 @@ header {
         align-items: center;
         width: 15%;
         justify-content: center;
-        // .ReturnImg {
-        //     width: 30px;
-        //     height: 30px;
-        //     margin-top: 1%;
-        // }
     }
 
     .NewpasswordTitle {
@@ -36,7 +31,7 @@ hr {
     .NewpasswordInfoContainer{
         width: 100%;
         height: 80vh;
-        background-color: brown;
+        background-color: #770b9c87;
         .Newpassword {
             text-align: center;
             padding-top: 5%;
@@ -59,4 +54,143 @@ hr {
                 box-shadow: 1px 0px 0px grey;
             }
         }
+    }
+
+    @media(max-width:576px) {
+        header {
+            display: flex;
+            justify-content: space-around;
+            .ContainerImageNewpassword {
+            }
+        
+            .NewpasswordTitle {
+                width: 50%;
+                text-align: left;
+                font-size: 24px;
+            }
+        
+            .ContainerImageLogo {
+                .Logo {
+                    height: 48px;
+                    width: 108px;
+                }
+            }
+        }
+        
+            .NewpasswordInfoContainer{
+                height: 90vh;
+                .Newpassword {
+                    font-size: 24px;
+                    padding-top: 11%;
+                }
+                .FormNewpassword {
+                    .InfoContainer {
+                        .Email {
+                            color: white;
+                            font-size: 22px;
+                        }
+                        .EmailInput {
+                            padding: 9px 35px;
+                            border-radius: 15px;
+                            margin-top: 10px;
+                        }
+                    }
+                    .ButtonNewpassword {
+                        padding: 8px 19px;
+                        font-size: 25px;
+                        margin-top: 30px;
+                    }
+                }
+            }
+    }
+
+    @media(min-width:768px) {
+        header {
+            display: flex;
+            justify-content: space-evenly;
+            .ContainerImageNewpassword {
+            }
+        
+            .NewpasswordTitle {
+                text-align: left;
+                font-size: 35px;
+            }
+        
+            .ContainerImageLogo {
+                .Logo {
+                    height: 70px;
+                    width: 120px;
+                    margin-right: 30px;
+                }
+            }
+        }
+        
+            .NewpasswordInfoContainer{
+                height: 91vh;
+                .Newpassword {
+                    font-size: 33px;
+                    padding-top: 11%;
+                }
+                .FormNewpassword {
+                    .InfoContainer {
+                        .Email {
+                            color: white;
+                            font-size: 30px;
+                        }
+                        .EmailInput {
+                            padding: 10px 100px;
+                            margin-top: 10px;
+                            margin-bottom: 10px;
+                            border-radius: 15px;
+                            font-size: 30px;
+                        }
+                    }
+                    .ButtonNewpassword {
+                        padding: 8px 26px;
+                        font-size: 34px;
+                        margin-top: 30px;
+                    }
+                }
+            }
+    }
+
+    @media(min-width:1200px) {
+        header {
+            justify-content: space-evenly;
+            .ContainerImageNewpassword {
+            }
+        
+            .NewpasswordTitle {
+                font-size: 44px;
+                width: 66%;
+            }
+        
+            .ContainerImageLogo {
+                .Logo {
+                    height: 85px;
+                    width: 131px;
+                }
+            }
+        }
+        
+            .NewpasswordInfoContainer{
+                .Newpassword {
+                    font-size: 50px;
+                }
+                .FormNewpassword {
+                    .InfoContainer {
+                        .Email {
+                            font-size: 42px;
+                        }
+                        .EmailInput {
+                            padding: 10px 150px;
+                            font-size: 38px;
+                        }
+                    }
+                    .ButtonNewpassword {
+                        padding: 11px 37px;
+                        font-size: 46px;
+                    }
+                }
+            }
     }
