--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,6 +1,9 @@
 header {
     display: flex;
     justify-content: space-evenly;
+    -webkit-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.75);
     .ContainerImageAvatar {
         display: flex;
         align-items: center;
@@ -30,14 +33,10 @@ header {
     }
 }
 
-hr {
-    margin: 0;
-}
-
     .HomeInfoContainer{
         width: 100%;
         height: 80vh;
-        background-color: brown;
+        background-color: #b816f18f;
         .Home {
             text-align: center;
             padding-top: 5%;
@@ -56,20 +55,108 @@ hr {
                 border-radius: 50%;
             }
         }
-        // .FormHome {
-        //     display: flex;
-        //     justify-content: center;
-        //     align-items: center;
-        //     flex-direction: column;
-        //     .InfoContainer {
-        //         margin-top: 2%;
-        //     }
-            // .ButtonHome {
-            //     padding: 2px 15px;
-            //     margin-top: 13px;
-            //     border-radius: 11px;
-            //     font-size: 19px;
-            //     box-shadow: 1px 0px 0px grey;
-            // }
+    }
+
+    @media(max-width:576px) {
+        header {
+            .ContainerImageAvatar {
+                .AvatarImg {
+                }
+            }
+        
+            .HomeTitle {
+            }
+        
+            .ContainerImageMenu {
+                .Menu {
+                }
+            }
         }
+        
+            .HomeInfoContainer{
+                height: 90vh;
+                .Home {
+                }
+                .AlertButton {
+                    .Alert {
+                        margin-top: 91%;
+                        height: 170px;
+                        width: 170px;
+                    }
+                }
+            }
+    }
+
+    @media(min-width:768px) {
+        header {
+            justify-content: space-around;
+            .ContainerImageAvatar {
+                .AvatarImg {
+                    width: 50px;
+                    height: 50px;
+                }
+            }
+        
+            .HomeTitle {
+                font-size: 45px;
+            }
+        
+            .ContainerImageMenu {
+                .Menu {
+                    width: 60px;
+                    height: 60px;
+                }
+            }
+        }
+        
+            .HomeInfoContainer{
+                height: 90vh;
+                .Home {
+                }
+                .AlertButton {
+                    .Alert {
+                        margin-top: 61%;
+                        height: 300px;
+                        width: 300px;
+                        font-size: 73px;
+                    }
+                }
+            }
+    }
+
+    @media(min-width:1200px) {
+        header {
+            justify-content: space-around;
+            .ContainerImageAvatar {
+                .AvatarImg {
+                    width: 80px;
+                    height: 80px;
+                }
+            }
+        
+            .HomeTitle {
+                font-size: 65px;
+            }
+        
+            .ContainerImageMenu {
+                .Menu {
+                    width: 90px;
+                    height: 90px;
+                }
+            }
+        }
+            .HomeInfoContainer{
+                height: 100%;
+                .Home {
+                }
+                .AlertButton {
+                    .Alert {
+                        margin-top: 30%;
+                        height: 450px;
+                        width: 450px;
+                        font-size: 100px;
+                    }
+                }
+            }
+    }
 
