--- a/src/components/Recovery/Recovery.scss
+++ b/src/components/Recovery/Recovery.scss
@@ -36,7 +36,7 @@ hr {
     .RecoverInfoContainer{
         width: 100%;
         height: 80vh;
-        background-color: brown;
+        background-color: #770b9c87;
         .Recovery {
             text-align: center;
             padding-top: 5%;
@@ -60,3 +60,148 @@ hr {
             }
         }
     }
+
+    @media(max-width:576px) {
+        header {
+            display: flex;
+            justify-content: center;
+            .ContainerImageRetrun {
+                .ReturnImg {
+                }
+            }
+        
+            .RecoveryTitle {
+                font-size: 24px;
+            }
+        
+            .ContainerImageLogo {
+                .Logo {
+                    height: 57px;
+                    margin-right: 15px;
+                }
+            }
+        }
+        
+            .RecoverInfoContainer{
+                height: 90vh;
+                .Recovery {
+                    padding-top: 25px;
+                    padding-left: 5px;
+                    padding-right: 5px;
+                }
+                .FormRecovery {
+                    .InfoContainer {
+                        .Email {
+                            color: white;
+                            font-size: 21px;
+                        }
+                        .EmailInput {
+                            border-radius: 15px;
+                            font-size: 20px;
+                            padding: 10px 39px;
+                            margin-top: 12px;
+                            margin-bottom: 12px;
+                        }
+                    }
+                    .ButtonRecovery {
+                        padding: 6px 31px;
+                        font-size: 25px;
+                    }
+                }
+    }
+}
+
+@media(min-width:768px) {
+    header {
+        display: flex;
+        justify-content: space-around;
+        .ContainerImageRetrun {
+            .ReturnImg {
+                width: 40px;
+                height: 40px;
+            }
+        }
+    
+        .RecoveryTitle {
+            font-size: 31px;
+        }
+    
+        .ContainerImageLogo {
+            .Logo {
+                height: 70px;
+                margin-right: 23px;
+            }
+        }
+    }
+    
+        .RecoverInfoContainer{
+            height: 93vh;
+            .Recovery {
+                padding-top: 9%;
+                font-size: 29px;
+            }
+            .FormRecovery {
+                .InfoContainer {
+                    .Email {
+                        font-size: 36px;
+                        color: white;
+                    }
+                    .EmailInput {
+                        border-radius: 15px;
+                        padding: 13px 100px;
+                        font-size: 30px;
+                        margin-top: 15px;
+                        margin-bottom: 15px;
+                    }
+                }
+                .ButtonRecovery {
+                    font-size: 31px;
+                    padding: 7px 40px;
+                }
+            }
+}
+}
+
+@media(min-width:1200px) {
+    header {
+        .ContainerImageRetrun {
+            .ReturnImg {
+                width: 45px;
+                height: 45px;
+            }
+        }
+    
+        .RecoveryTitle {
+            font-size: 47px;
+        }
+    
+        .ContainerImageLogo {
+            .Logo {
+                height: 86px;
+            }
+        }
+    }
+    
+        .RecoverInfoContainer{
+            .Recovery {
+                font-size: 40px;
+            }
+            .FormRecovery {
+                .InfoContainer {
+                    .Email {
+                        font-size: 42px;
+                    }
+                    .EmailInput {
+                        padding: 18px 150px;
+                        font-size: 35px;
+                        margin-top: 25px;
+                        margin-bottom: 25px;
+                    }
+                }
+                .ButtonRecovery {
+                    font-size: 40px;
+                    padding: 9px 47px;
+                }
+            }
+}
+}
